// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyCopy /> does not render content when no \`content\` prop supplied 1`] = `
<article
  className="base dark"
  id="Anti-Oxidant"
>
  <header
    className="base"
    id="Anti-Oxidant"
  >
    <h2
      className="base mediumWeightFont xXSmall dark eyebrow"
    >
      Recommended Nearby
    </h2>
    <h3
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h3>
    <h4
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Active Nutrients
    </h4>
  </header>
  <div
    className="copy"
  >
    Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
  </div>
</article>
`;

exports[`<BodyCopy /> renders base component correctly 1`] = `
<article
  className="base dark"
  id="Anti-Oxidant"
>
  <header
    className="base"
    id="Anti-Oxidant"
  >
    <h2
      className="base mediumWeightFont xXSmall dark eyebrow"
    >
      Recommended Nearby
    </h2>
    <h3
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h3>
    <h4
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Active Nutrients
    </h4>
  </header>
  <div
    className="copy"
  >
    Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
  </div>
  <div
    className="contentWrapper"
  >
    <div>
      <a
        className="base blockStyle hasIcon left dark"
        href="/"
        target="_self"
      >
        Proin vulputate
         
        <i
          aria-hidden="true"
          className="icon"
        >
          <svg
            className="base rightArrow dark"
            data-ref=""
            focusable="false"
            height={12}
            role="img"
            style={
              Object {
                "height": "12px",
                "width": "12px",
              }
            }
            tabIndex={-1}
            viewBox="0 0 50 50"
            width={12}
          >
            <g>
              <path
                d="M30.1,5.3L50,25.1L30.1,45h-6.6l18-17.6H0v-4.8h41.5l-18-17.6h6.6V5.3z"
              />
            </g>
          </svg>
        </i>
      </a>
      <a
        className="base blockStyle hasIcon left dark"
        href="Quisque lacus"
        target="_self"
      >
        Quisque lacus
         
        <i
          aria-hidden="true"
          className="icon"
        >
          <svg
            className="base rightArrow dark"
            data-ref=""
            focusable="false"
            height={12}
            role="img"
            style={
              Object {
                "height": "12px",
                "width": "12px",
              }
            }
            tabIndex={-1}
            viewBox="0 0 50 50"
            width={12}
          >
            <g>
              <path
                d="M30.1,5.3L50,25.1L30.1,45h-6.6l18-17.6H0v-4.8h41.5l-18-17.6h6.6V5.3z"
              />
            </g>
          </svg>
        </i>
      </a>
    </div>
  </div>
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` or \`primaryTitle\` prop are passed 1`] = `
<article
  className="base dark"
>
  <header
    className="base"
  >
    <h2
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` prop is passed 1`] = `
<article
  className="base dark"
>
  <header
    className="base"
  >
    <h2
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
</article>
`;
